2007-01-28 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/cmd.src/cmdutil.cc: NUL device is detected as CG_FILE type
	  on WIN32
	* src/SDCCdwarf2.c, src/SDCCglobl.h, src/SDCCmain.c, src/SDCCutil.c,
	  src/SDCCutil.h, src/avr/gen.c, src/ds390/gen.c, src/hc08/gen.c,
	  src/mcs51/gen.c, src/pic/device.c, src/pic/gen.c, src/pic/pcode.c,
	  src/pic/pcodepeep.c, src/pic/ralloc.c, src/pic16/device.h,
	  src/pic16/gen.c, src/pic16/main.c, src/pic16/pcode.c,
	  src/pic16/pcodepeep.c, src/pic16/ralloc.c, src/xa51/gen.c,
	  src/z80/gen.c, support/Util/MySystem.c:
	  accept slash and backslash as directory separator on WIN32 and
	  Cygwin ports

2007-01-28 Raphael Neider <rneider AT web.de>

	* src/pic16/devices.inc,
	* device/include/pic16/pic18f[24][23]21.h,
	* device/include/pic16/pic18fregs.h,
	* device/lib/pic16/libdev/pic18f[24][23]21.c,
	* device/lib/pic16/pics.all: added support for the 18f[24][23]21 family
	* device/lib/pic16/libio/adc.ignore,
	* device/lib/pic16/libio/i2c.ignore,
	* device/lib/pic16/libio/usart.ignore: do not build I/O lib for new
	  family, as gputils do not yet support the devices
	* device/lib/pic16/Makefile.subdir: ignore errors on install
	* support/scripts/inc2h-pic16.pl: script to generate pic16 device
	  headers and libraries from gputils .inc files

2007-01-26 Paul Stoffregen <paul AT pjrc.com>

	* doc/sdccman.lyx: add printf_fast_f precision limitation note

2007-01-26 Paul Stoffregen <paul AT pjrc.com>

	* doc/sdccman.lyx: add printf benchmarks

2007-01-25 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/printf_fast.c: fix %c, char promoted to int
	* device/lib/printf_tiny.c: fix %c, char promoted to int

2007-01-25 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/printf_fast.c: fix float overflow check, bug #1525093

2007-01-25 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/swap.c: 64 bit hosts failed
	* doc/sdccman.lyx: added preliminary mcs51 printf feature matrix
